Override project with Trial-Zenith full project snapshot (v2)
Replace the working tree with the latest full-project export, discarding
everything not present in it. This supersedes the prior merge with
Trial-Zenith's separate "Force overwrite remote repository" commit
(the binary jar dump and v1_21_R1-suffixed CraftBukkit adapters are
dropped) per explicit instruction to use only the files in this zip.