@@ -17,15 +17,14 @@ import org.jetbrains.annotations.Nullable;
 import java.io.File;
 import java.io.FileOutputStream;
 import java.io.InputStream;
+import java.io.IOException;
 import java.io.OutputStream;
 import java.util.Collections;
 import java.util.List;
 import java.util.logging.Logger;
 import java.util.logging.Level;
 
-/**
- * Hybrid Bridge JavaPlugin implementation.
- */
+
 public abstract class JavaPlugin extends PluginBase implements org.bukkit.command.TabExecutor {
     private boolean isEnabled = false;
     protected org.bukkit.plugin.PluginLoader loader;
@@ -40,6 +39,7 @@ public abstract class JavaPlugin extends PluginBase implements org.bukkit.comman
     private FileConfiguration newConfig;
     private File configFile;
     private io.papermc.paper.plugin.lifecycle.event.LifecycleEventManager<org.bukkit.plugin.Plugin> lifecycleManager;
+    private boolean allowsLifecycleRegistration = true;
 
     protected JavaPlugin() {
         final ClassLoader classLoader = this.getClass().getClassLoader();
@@ -47,6 +47,17 @@ public abstract class JavaPlugin extends PluginBase implements org.bukkit.comman
             throw new IllegalStateException("JavaPlugin requires " + PluginClassLoader.class.getName());
         }
         ((PluginClassLoader) classLoader).initialize(this);
+    }
+
+    /**
+     * Returns the plugin jar file. Bukkit/Spigot expose this to subclasses as a
+     * protected final method, so the inherited binary contract is preserved here.
+     */
+    protected final @NotNull File getFile() {
+        if (file == null) {
+            throw new IllegalStateException("Plugin has not been initialized");
+        }
+        return file;
     }
 
     @Override
@@ -104,32 +115,26 @@ public abstract class JavaPlugin extends PluginBase implements org.bukkit.comman
         }
 
         resourcePath = resourcePath.replace('\\', '/');
-        InputStream in = getResource(resourcePath);
-        if (in == null) {
-            throw new IllegalArgumentException("The embedded resource '" + resourcePath + "' cannot be found");
-        }
-
         File outFile = new File(dataFolder, resourcePath);
         int lastIndex = resourcePath.lastIndexOf('/');
         File outDir = new File(dataFolder, resourcePath.substring(0, lastIndex >= 0 ? lastIndex : 0));
 
-        if (!outDir.exists()) {
-            outDir.mkdirs();
+        if (!outDir.exists() && !outDir.mkdirs() && !outDir.isDirectory()) {
+            throw new IllegalStateException("Could not create plugin data directory " + outDir);
         }
 
-        try {
-            if (!outFile.exists() || replace) {
-                OutputStream out = new FileOutputStream(outFile);
-                byte[] buf = new byte[1024];
-                int len;
-                while ((len = in.read(buf)) > 0) {
-                    out.write(buf, 0, len);
-                }
-                out.close();
-                in.close();
+        try (InputStream in = getResource(resourcePath)) {
+            if (in == null) {
+                throw new IllegalArgumentException("The embedded resource '" + resourcePath + "' cannot be found");
             }
-        } catch (Exception ex) {
-            logger.severe("Could not save " + outFile.getName() + " to " + outFile);
+            if (!outFile.exists() || replace) {
+                try (OutputStream out = new FileOutputStream(outFile)) {
+                    in.transferTo(out);
+                }
+            }
+        } catch (IOException ex) {
+            logger.log(java.util.logging.Level.SEVERE,
+                    "Could not save " + outFile.getName() + " to " + outFile, ex);
         }
     }
 
@@ -169,15 +174,27 @@ public abstract class JavaPlugin extends PluginBase implements org.bukkit.comman
         if (isEnabled != enabled) {
             isEnabled = enabled;
             if (isEnabled) {
-                logger.info("Enabling " + getDescription().getFullName());
-                onEnable();
+                if (io.ampznetwork.lunararc.common.config.LunarArcConfig.isQuietConsole()) {
+                    logger.fine("Enabling " + getDescription().getFullName());
+                } else {
+                    logger.info("Enabling " + getDescription().getFullName());
+                }
+                try {
+                    onEnable();
+                } finally {
+                    this.allowsLifecycleRegistration = false;
+                }
             } else {
-                logger.info("Disabling " + getDescription().getFullName());
+                if (io.ampznetwork.lunararc.common.config.LunarArcConfig.isQuietConsole()) {
+                    logger.fine("Disabling " + getDescription().getFullName());
+                } else {
+                    logger.info("Disabling " + getDescription().getFullName());
+                }
                 try {
                     onDisable();
                 } catch (Throwable t) {
-                    // Guard: onDisable() must never propagate — a crash here would
-                    // mask the original onEnable() exception (e.g. handleCrash pattern).
+
+
                     logger.log(java.util.logging.Level.SEVERE,
                             "Error in onDisable() for " + getDescription().getFullName(), t);
                 }
@@ -197,9 +214,7 @@ public abstract class JavaPlugin extends PluginBase implements org.bukkit.comman
         return null;
     }
 
-    /**
-     * Internal Paper 1.21.1 initialization method.
-     */
+
     public final void init(@NotNull Server server, @NotNull PluginDescriptionFile description, @NotNull File dataFolder,
             @NotNull File file, @NotNull ClassLoader classLoader, @NotNull PluginMeta pluginMeta,
             @NotNull Logger logger) {
@@ -212,7 +227,8 @@ public abstract class JavaPlugin extends PluginBase implements org.bukkit.comman
         this.logger = logger;
         this.configFile = new File(dataFolder, "config.yml");
 
-        this.lifecycleManager = io.ampznetwork.lunararc.common.server.LunarArcLifecycleEventManager.create();
+        this.lifecycleManager = io.ampznetwork.lunararc.common.server.LunarArcLifecycleEventManager.create(
+                this, () -> this.allowsLifecycleRegistration);
         if (!(classLoader instanceof PluginClassLoader pluginClassLoader)) {
             throw new IllegalArgumentException("Plugin class loader is not a PluginClassLoader");
         }
@@ -262,9 +278,9 @@ public abstract class JavaPlugin extends PluginBase implements org.bukkit.comman
         if (command instanceof org.bukkit.command.PluginCommand pc && pc.getPlugin() == this) {
             return pc;
         }
-        // Fallback: try to find it in the description if it's not registered yet
+
         if (description.getCommands() != null && description.getCommands().containsKey(search)) {
-            // Return a proxy if needed, but usually it should be in the command map
+
         }
         return null;
     }
@@ -279,7 +295,8 @@ public abstract class JavaPlugin extends PluginBase implements org.bukkit.comman
     }
 
     public @NotNull List<String> getPluginLibraries() {
-        return Collections.emptyList();
+        List<String> libraries = description.getLibraries();
+        return libraries == null || libraries.isEmpty() ? Collections.emptyList() : List.copyOf(libraries);
     }
 
     public @NotNull Logger getLogger() {
